--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -331,9 +331,7 @@
 
 // Retina image
 
-@media
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi)
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
 
   // Retina-specific stuff here
 
