--- a/app/views/pages/feed.html.haml
+++ b/app/views/pages/feed.html.haml
@@ -34,9 +34,9 @@
 
       .moment-comments
         %span.moment-comments-likes
-
+          <a href="#" title="Visit this user's profile page">Andy Knight</a> and <a href="#">12 others</a> like this.
         %span.moment-comments-more
-
+          <a href="#" title="View all comments">View 3 more comments</a>
         %ul.moment-comments-list
           %li.moment-comments-list-comment
             = image_tag "andy_avatar.png", class: "moment-comments-list-avatar"
