Added the moment detail page

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -128,6 +128,11 @@
   background: #EEEDEB image-url("social-actions-sprite.png") no-repeat
   font-size: 13px
 
+.moment-comments-likes,
+.moment-comments-more
+  background: #EEEDEB image-url("social-actions-sprite.png") no-repeat
+  font-size: 13px
+
 .moment-comments-likes
   padding-left: 35px
   background-position: 10px -41px
