--- a/app/views/connections/index.html.haml
+++ b/app/views/connections/index.html.haml
@@ -1,5 +1,8 @@
 - @title = "#{t('meta.connections.index.title')} | #{@user.name || @user.username}"
 
+- content_for :title do
+  = t('meta.connections.index.title')
+
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
