--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,9 +1,14 @@
-= form_for @note, as: :note, url: @note.id ? note_path(@note.id) : notes_path, :html => {class: "full_page_form"} do |f|
-  - if @note.errors.any?
+:ruby
+  # Partial locals params
+  # Required
+  # - note : an instance of Note
+
+= form_for note, as: :note, url: note.id ? note_path(note.id) : notes_path, :html => {class: "full_page_form"} do |f|
+  - if note.errors.any?
     .form_errors
       =t("notes.creation form errors")
       %ul
-        - @note.errors.each do |e|
+        - note.errors.each do |e|
           %li= e
   %p
     = f.label :title, t("notes.title field")
@@ -12,13 +17,17 @@
     = f.label :content, t("notes.content field")
     %div{style: "margin: 20px 0;"}
       = f.text_area :content
-  %p
-    = f.label :reference, t("notes.reference field")
-    = @note.reference_list.map{|r| link_to(r, bible_path(r))}.join(", ").html_safe
-    = hidden_field_tag "note[references]", @note.reference_list.to_flat_usfm
-    = hidden_field_tag "note[version_id]", @note.version_id
+
+  - # if reference_list is empty, no need to show these fields.  
+  - # Causes an error otherwise when sending empty note[references]/note[version_id] params
+  - unless note.reference_list.empty?
+    %p
+      = f.label :reference, t("notes.reference field")
+      = note.reference_list.map{|r| link_to(r, bible_path(r))}.join(", ").html_safe
+      = hidden_field_tag "note[references]", note.reference_list.to_flat_usfm
+      = hidden_field_tag "note[version_id]", note.version_id
   %p
     = f.label :user_status, t("notes.status field")
-    = f.select :user_status, options_for_select(object_status, @note.user_status)
+    = f.select :user_status, options_for_select(object_status, note.user_status)
   %p
-    .float_right= f.submit t("notes.save"), {class: "action_button_green"}
+    = f.submit t("notes.save"), {class: "action_button_green float_right"}
