--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,12 @@
             #nav_primary{:role => "navigation"}
               %nav
                 %ul
+                  %li#nav_primary_home{class: highlight.call(is_bible_url) }
+                    %a.icon{href: '/bible'}
+                      %span &nbsp;
+                    %a.tooltip{href: "/bible", style:"display: none;"}
+                      %span= t('bible')
+
                   %li#nav_primary_bible{class: highlight.call(is_bible_url) }
                     %a.icon{href: '/bible'}
                       %span &nbsp;
