Updated mobile primary nav for social.

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -1,6 +1,9 @@
 // `Main
 //----------------------------------------------------------------------------------------------------
 
+#main
+  margin: 0
+
 #reader_header + article
   margin-top: 0px
 
