--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -26,7 +26,7 @@
   background:
     repeat: no-repeat
 
-#nav_mobile_today a.icon
+#nav_mobile_home a.icon
   background:
     image: image-url("m_nav_sprite.png")
     position: 12px 5px
