--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1,4 +1,4 @@
-// Adjusting the article tag on the social pages
+// !Adjusting the article tag on the social pages
 
 #main article.social-feed,
 #main article.social-detail
@@ -6,9 +6,9 @@
   padding: 0
   overflow: visible
 
-// -------------------- Feed -------------------------
+// !-------------------- Feed -------------------------
 
-// Moment containers
+// !Moment containers
 
 .moment
   margin: 0 0 15px 0
@@ -19,30 +19,30 @@
   margin-bottom: 0
   border-bottom: 1px solid #DEDDDB
 
-// Share comment like etc.
+// !Share comment like etc.
 
 .moment-actions
   width: auto
   margin-bottom: 0
   border-bottom: 1px solid #DEDDDB
 
-// Stuff each moment action has in common
+// !Stuff each moment action has in common
 
 
-// Specific stuff for each action
+// !Specific stuff for each action
 
 .moment-actions-time
-  width: 50%
+  width: 48%
 
-// Comments attached to a moment
+// !Comments attached to a moment
 
 .moment-comments
   width: 87%
 
-// Common comments code
+// !Common comments code
 
 
-// Specific comments code
+// !Specific comments code
 
 #main article .moment-comments-list-text,
 .moment-comments-list-text
@@ -53,13 +53,13 @@
   width: 80%
 
 
-// Moment badge positioning
+// !Moment badge positioning
 
 
-// Moment common code
+// !Moment common code
 
 
-// Bookmark, reading plan, download, and group moments -- they share the same layout
+// !Bookmark, reading plan, download, and group moments -- they share the same layout
 
 .moment-bm-text,
 .moment-rp-text,
@@ -68,17 +68,19 @@
 .moment-no-text,
 .moment-bdg-text,
 .moment-vid-text
-  width: 78%
+  width: 70%
+  line-height: 1.3em
 
 
-// Verse of the day moment
+// !Verse of the day moment
 
 #main article .moment-vod-verse,
 .moment-vod-verse
   font: italic 24px "times new roman", times, serif
+  width: 90%
 
 
-// Note moment
+// !Note moment
 
 #main article .moment-no-note,
 .moment-no-note
@@ -88,7 +90,7 @@
 #main article .moment-no-note-text
   font-size: 13px
 
-// Video moment
+// !Video moment
 
 .moment-vid-info
   margin: 65px 0 0
@@ -127,27 +129,27 @@
   overflow: hidden
   text-overflow: ellipsis
 
-// Badge moment
+// !Badge moment
 
 .moment-bdg-info
   margin: 65px 0 0 0
 
 
-// ------------------------ Detail page -------------------------
+// !------------------------ Detail page -------------------------
 
 #main article.social-detail
 
-  // Striping out the width constraints, killing floats
+  // !Striping out the width constraints, killing floats
 
-  // Moment containers
+  // !Moment containers
 
   .moment
     margin: 0 0 15px 0
 
-  // Share comment like etc.
+  // !Share comment like etc.
 
 
-  // Comments attached to a moment
+  // !Comments attached to a moment
 
   .moment-comments
     width: 87%
@@ -156,7 +158,7 @@
   .moment-comments-input-text
     width: 80%
 
-  // Bookmark, reading plan, download, and group moments -- they share the same layout
+  // !Bookmark, reading plan, download, and group moments -- they share the same layout
 
   .moment-bm-text,
   .moment-rp-text,
@@ -167,7 +169,7 @@
   .moment-vid-text
     width: 78%
 
-// Sidebar comment input
+// !Sidebar comment input
 
 .social-sidebar
   position: static
