Flattened main header. Added verse of the day moment to feed.

--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -27,8 +27,8 @@
 #header
   +round
   -webkit-font-smoothing: subpixel-antialiased
-  background: #333 image-url("header.png") repeat-x
-  border: 1px solid #1e1e1f
+  background-color: #232324
+  border: 1px solid #232324
   font-size: 11px
   padding: 0 10px 0 20px
   position: relative
