--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -220,12 +220,19 @@
 
 .moment-vod-title
   color: #666
+  background: image-url("social-vod-icon.png") no-repeat left center
+  height: 48px
+  line-height: 46px
+  padding-left: 58px
+  margin-bottom: 0
 
 .moment-vod-verse
   font: italic 24px "times new roman", times, serif
   letter-spacing: -.05em
-  width: 360px
-  margin-bottom: 10px
+  margin: 10px 0 15px
+  background-color: #EEEDEB
+  +border-radius(5px)
+  padding: 15px
 
 .moment-vod-links,
 .moment-vod-list
@@ -429,3 +436,6 @@
     background: image-url("moment-no-note-text-bg@2x.png") repeat-y left top
     background-size: 600px 17px
 
+  .moment-vod-title
+    background: image-url("social-vod-icon@2x.png") no-repeat left center
+    background-size: 48px 48px
