--- a/app/views/pages/feed.html.haml
+++ b/app/views/pages/feed.html.haml
@@ -43,17 +43,17 @@
             %span.moment-comments-list-avatar
               = image_tag "andy_avatar.png"
             %p.moment-comments-list-text
-              <a href="#" title="Visit this user's profile page">Stu Pedaso</a> There?s a voice that keeps on calling me. Down the road, that?s where I?ll always be. Every stop I make, I make a new friend. Can?t stay for long, just turn around and I?m gone again.
+              <a href="#" title="Visit this user's profile page">Stu Pedaso</a> There's a voice that keeps on calling me. Down the road, that's where I'll always be. Every stop I make, I make a new friend. Can't stay for long, just turn around and I'm gone again.
           %li.moment-comments-list-comment
             %span.moment-comments-list-avatar
               = image_tag "andy_avatar.png"
             %p.moment-comments-list-text
-              <a href="#" title="Visit this user's profile page">Stu Pedaso</a> There?s a voice that keeps on calling me. Down the road, that?s where I?ll always be.
+              <a href="#" title="Visit this user's profile page">Stu Pedaso</a> There's a voice that keeps on calling me. Down the road, that's where I'll always be.
           %li.moment-comments-list-comment
             %span.moment-comments-list-avatar
               = image_tag "andy_avatar.png"
             %p.moment-comments-list-text
-              <a href="#" title="Visit this user's profile page">Stu Pedaso</a> There?s a voice that keeps on calling me. Down the road, that?s where I?ll always be. Every stop I make, I make a new friend. Can?t stay for long, just turn around and I?m gone again.
+              <a href="#" title="Visit this user's profile page">Stu Pedaso</a> There's a voice that keeps on calling me. Down the road, that's where I'll always be. Every stop I make, I make a new friend. Can't stay for long, just turn around and I'm gone again.
 
         %span.moment-comments-input
           %span.moment-comments-input-avatar
