Finished flattening mobile primary nav

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -239,18 +239,15 @@
 
   .mobile #nav_mobile_sign_up
     background-color: #0077b4
-    border-top: 1px solid #2492CA
-    border-bottom: 1px solid #00669A
+    border: 0
 
   .mobile #nav_mobile_sign_out
     background-color: #993300
-    border-bottom: 1px solid #7F2A00
-    border-top: 1px solid #A63700
+    border: 0
 
   .mobile #nav_mobile_sign_in
     background-color: #555
-    border-bottom: 1px solid #353535
-    border-top: 1px solid #777
+    border: 0
 
   #invalid_chapter button
     display: none
