--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -42,6 +42,146 @@
 #header a:hover
   color: #fff
 
+// `Header > Friend Requests & Notifications
+//----------------------------------------------------------------------------------------------------
+
+#header .friend-requests-btn,
+#header .notifications-btn
+  display: block
+  float: left
+  width: 40px
+  height: 40px
+  margin: 5px 0px 5px 15px
+  text-indent: -9999px
+
+#header .friend-requests-btn
+  background: image-url("requests-FPO.png") no-repeat
+
+#header .notifications-btn
+  background: image-url("notifications-FPO.png") no-repeat
+
+
+#header 
+  .header-popover
+    position: absolute
+    top: 48px
+    left: 40px
+    min-width: 330px
+    max-width: 600px
+    border: 1px solid #d4d4d4
+    +border-radius(5px)
+    background: #fff
+    display: none
+
+    ul
+      margin-bottom: 0px
+
+    .text-link
+      color: #0084c8
+      font-weight: bold
+      font-size: 12px
+      margin: 0px
+      padding: 0px
+      display: inline
+      line-height: 12px
+
+    .text-link.wide
+      width: 100%
+      border-top: 1px solid #ceced0
+      background: #eeedeb
+      text-align: center
+      display: block
+      padding: 12px 0px
+
+    h4
+      font-size: 12px
+      color: #505050
+      float: left
+      padding-left: 10px
+      line-height: 12px
+      margin-bottom: 5px
+
+    .find-friends
+      float: right
+      padding-right: 10px
+
+    .arrow
+      background: image-url("popover-arrow.png") no-repeat
+      position: relative
+      top: -8px
+      left: 155px
+      display: block
+      width: 19px
+      height: 9px
+
+    .list-item
+      height: 80px
+      border-top: 1px solid #d4d4d4
+      padding: 5px 10px 10px
+
+      .item-content
+        float: left
+        min-width: 280px
+
+        img
+          height: 48px
+          width: 48px
+          float: left
+          display: block
+          margin: 10px 10px 10px 0px
+          border-radius: 28px
+          border: 3px solid #ddd
+
+        p
+          line-height: 0px
+          margin: -8px 0px 0px
+
+        .timestamp
+          color: #d4d4d4
+          padding: 5px 10px 5px 22px
+          background: image-url("timestamp-icon.png") no-repeat left center
+          display: block
+          float: left
+          line-height: 20px
+          margin-top: 10px
+
+      .item-actions
+        float: right
+        min-width: 50px
+        margin-left: 20px
+
+        .action_button_green
+          color: #fff
+
+        .action_button_green,
+        .action_button_grey
+          padding: 4px 0px
+          text-align: center
+          font-size: 13px
+          margin: 0px
+          float: left
+          margin-top: 10px
+          width: 100%
+
+
+  .header-popover.notifications
+    left: 80px
+
+    .arrow
+      left: 170px
+
+    .list-item
+      height: 30px
+      border-top: 1px solid #d4d4d4
+      padding: 5px 10px 10px
+
+      p
+        margin-bottom: 0px
+        line-height: 28px
+        border-bottom: 1px solid #f1f1f1
+        
+
+
 // `Header > Search
 //----------------------------------------------------------------------------------------------------
 
