added javascript to handle popover click events

--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -71,7 +71,7 @@
     border: 1px solid #d4d4d4
     +border-radius(5px)
     background: #fff
-    display: none
+    opacity: 0
 
     ul
       margin-bottom: 0px
